--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
             </p>
             <div class=links></div>
-            <div class=footer>Made with <a href=https://gohugo.io>Hugo</a> using the <a href=https://github.com/EmielH/stip-hugo/>Stip</a> theme.</div>
+            <div class=footer>Made with <a href=https://gohugo.io>Hugo</a> using the <a href=https://github.com/EmielH/stip-hugo/>Stip</a> theme. <a href=https://github.com/EoinFarrell/2022-mondello-24-hour.eoinfarrell.dev>Source Code</a></div>
          </div>
          <div><img src=/images/background.jpg class=portrait alt=Portrait></div>
       </main>
